Cleanup: Wave 6 submission polish + security fixes
- Enable all chain type assertions in contract (27+ security checks)
- Fix hardcoded Windows path in wsl_deploy_wrapper.sh
- Remove TODO comments from bankroll contract
- Remove debug console.log from frontend
- Update .gitignore for test artifacts
- Add E2E test suite with Playwright
- Add demo video script for submission

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,17 @@ frontend/.packages
 # Temp files
 *.tmp
 *~
+nul
+
+# Dependencies
+node_modules/
+package-lock.json
+
+# Build output
+build_output.txt
+
+# Test screenshots
+tests/e2e/*.png
+
+# Root level screenshots (keep docs/screenshots)
+/*.png
