--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "8082:8082"  # Service B (Player B)
       - "8083:8083"  # Lobby/Master service
     volumes:
-      - C:/Users/prate/Downloads/new prejt or buildahtin/liars-dice:/build
+      - .:/build
     working_dir: /build
     command: bash /build/docker-run.sh
     environment:
